Fix scrolling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,9 @@ html {
     font-family: 'silkscreen_expandednormal', Courier, monospace;
     font-size: 2.5vw;
     text-align: center;
-    color:rgb(135, 125, 120)
+    color:rgb(135, 125, 120);
+    height: 100%;
+    overflow: hidden;
 }
 
 h1 {
